# banking-server

./: .gitignore  .gitmodules  API_DOCUMENTATION.md  API_Example.json  Banking.db  Banking_db.db  CMakeLists.txt  Connection.cpp  DatabaseOperations.cpp  Employee.cpp  EmployeeOperations.cpp  LICENSE  README.md  Table.sql  User.cpp  doxygen_cleanup_script.py  driver.cpp  sql_commands.txt
.github/workflows/: Code-Coverage.yml  cmake-single-platform.yml  cmake.yml  main.yml
Cmake/: ExeList.cmake  LibList.cmake
Tst/: CMakeLists.txt
Tst/Communications/: CMakeLists.txt  DatabaseOpperations.py  SocketTest.cpp  ZMQCommsTest.cpp  ZMQReceiveTest.cpp  ZMQRequestTest.cpp  ZMQSocketTest.cpp
Tst/Connection/: CMakeLists.txt  ConnectionTest.cpp
Tst/DataBaseOperations/: AccountOperationsTest.cpp  BranchOperationsTest.cpp  CMakeLists.txt  CustomerOperationsTest.cpp  DatabaseOperationsTest.cpp  EmployeeOperationsTest.cpp
Tst/Mocks/: CMakeLists.txt  MockDatabaseOperations.hpp  MockZMQRequest.hpp  MockZMQSocket.cpp  MockZMQSocket.hpp
Tst/Scripts/: DatabaseOpperations.py  run_unit_test.py  tcp_client_test.py  tcp_server_test.py
Tst/Users/: CMakeLists.txt  CustomerTest.cpp  EmployeeTest.cpp
Tst/Utilities/: CMakeLists.txt  LoggerTest.cpp
inc/: Connection.hpp  DatabaseOperations.hpp  Employee.hpp  EmployeeOperations.hpp  User.hpp
src/: CMakeLists.txt
src/Communications/: CMakeLists.txt  ZMQComms.cpp  ZMQContextManager.cpp  ZMQReceive.cpp  ZMQRepSocket.cpp  ZMQReqSocket.cpp  ZMQRequest.cpp
src/Communications/inc/: IZMQSocket.hpp  ZMQComms.hpp  ZMQContextManager.hpp  ZMQReceive.hpp  ZMQRepSocket.hpp  ZMQReqSocket.hpp  ZMQRequest.hpp
src/Communications/socket/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  TcpClient.cpp  TcpServer.cpp  TcpSocket.cpp
src/Communications/socket/inc/: ISocket.hpp  TcpClient.hpp  TcpServer.hpp  TcpSocket.hpp
src/Communications/zmq/: ZMQContextManager.cpp  ZMQReceive.cpp  ZMQReqSocket.cpp  ZMQRequest.cpp
src/Communications/zmq/inc/: IZMQRequest.hpp  IZMQSocket.hpp  ZMQReceive.hpp  ZMQRepSocket.hpp  ZMQReqSocket.hpp
src/Connection/: Banking_db.db  CMakeLists.txt  Connection.cpp  Main.cpp
src/Connection/inc/: Connection.hpp
src/DatabaseOperations/: AccountOperations.cpp  BranchOperations.cpp  CMakeLists.txt  CustomerOperations.cpp  DatabaseOperations.cpp  Dispatcher.cpp  EmployeeOperations.cpp  Main.cpp
src/DatabaseOperations/inc/: AccountOperations.hpp  BranchOperations.hpp  CustomerOperations.hpp  DatabaseOperations.hpp  Dispatcher.hpp  EmployeeOperations.hpp  IOperations.hpp
src/Ext/: CMakeLists.txt
src/Ext/json-develop/docs/mkdocs/: requirements.txt
src/Ext/sqlite3/: CMakeLists.txt
src/Users/: CMakeLists.txt  Customer.cpp  Employee.cpp  User.cpp
src/Users/inc/: Customer.hpp  Employee.hpp  User.hpp
src/Utilities/Logger/: CMakeLists.txt  Logger.cpp
src/Utilities/Logger/inc/: Logger.hpp
